added rotation around any given point

--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Bestes Spiel ^_^</title>
+    
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="lib/foundation/css/foundation.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -35,7 +37,9 @@
     <script src="src/view_templates/map.js"></script>
     <script src="src/view_templates/hidden_image.js"></script>
 
+    <script src="src/view/canvas_manager.js"></script>
     <script src="src/view/map_visuals.js"></script>
+    <script src="src/view/map_controls.js"></script>
 
     <script>
         let gameApp = new GameApp("content_area");
