--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,7 @@
     
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="lib/foundation/css/foundation.css">
+    <link rel="stylesheet" href="lib/jquery-ui/jquery-ui.css" >
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -20,6 +21,7 @@
 
     <!-- Foundation -->
     <script src="lib/foundation/js/vendor/jquery.js"></script>
+    <script src="lib/jquery-ui/jquery-ui.js"></script>
     <script src="lib/foundation/js/vendor/what-input.js"></script>
     <script src="lib/foundation/js/vendor/foundation.js"></script>
 
@@ -36,10 +38,12 @@
     <script src="src/view_templates/templates.js"></script>
     <script src="src/view_templates/map.js"></script>
     <script src="src/view_templates/hidden_image.js"></script>
+    <script src="src/view_templates/marker.js"></script>
 
     <script src="src/view/canvas_manager.js"></script>
     <script src="src/view/map_visuals.js"></script>
     <script src="src/view/map_controls.js"></script>
+    <script src="src/view/marker_controls.js"></script>
 
     <script>
         let gameApp = new GameApp("content_area");
