--- a/web/index.html
+++ b/web/index.html
@@ -40,14 +40,23 @@
     <script src="src/view_templates/map.js"></script>
     <script src="src/view_templates/hidden_image.js"></script>
     <script src="src/view_templates/marker.js"></script>
+    <script src="src/view_templates/map_selection_dialog.js"></script>
 
     <script src="src/view/canvas_manager.js"></script>
     <script src="src/view/map_visuals.js"></script>
     <script src="src/view/map_controls.js"></script>
     <script src="src/view/marker_controls.js"></script>
+    <script src="src/view/map_selection_dialog.js"></script>
+
+    <script src="src/game_logic/path_manager.js"></script>
+    <script src="src/game_logic/map_path.js"></script>
+    <script src="src/game_logic/path.js"></script>
+    <script src="src/game_logic/path_edge.js"></script>
+    <script src="src/game_logic/path_node.js"></script>
+    <script src="src/game_logic/map_selection_handler.js"></script>
 
     <script>
-        let gameApp = new GameApp("content_area");
+        let gameApp = new navigame.GameApp("content_area");
         gameApp.startGame();
     </script>
 </body>
