--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="de">
 <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Bestes Spiel ^_^</title>
     
@@ -40,10 +41,12 @@
     <script src="src/view_templates/map.js"></script>
     <script src="src/view_templates/hidden_image.js"></script>
     <script src="src/view_templates/marker.js"></script>
+    <script src="src/view_templates/map_list.js"></script>
     <script src="src/view_templates/map_selection_dialog.js"></script>
 
     <script src="src/view/canvas_manager.js"></script>
     <script src="src/view/map_visuals.js"></script>
+    <script src="src/view/map_list.js"></script>
     <script src="src/view/map_controls.js"></script>
     <script src="src/view/marker_controls.js"></script>
     <script src="src/view/map_selection_dialog.js"></script>
