lines between markers

--- a/web/index.html
+++ b/web/index.html
@@ -49,6 +49,7 @@
     <script src="src/view/map_list.js"></script>
     <script src="src/view/map_controls.js"></script>
     <script src="src/view/marker_controls.js"></script>
+    <script src="src/view/edge_controls.js"></script>
     <script src="src/view/map_selection_dialog.js"></script>
 
     <script src="src/game_logic/path_manager.js"></script>
