--- a/web/index.html
+++ b/web/index.html
@@ -23,6 +23,7 @@
     <!-- Foundation -->
     <script src="lib/foundation/js/vendor/jquery.js"></script>
     <script src="lib/jquery-ui/jquery-ui.js"></script>
+    <script src="lib/jquery.ui.touch-punch.min.js"></script>
     <script src="lib/foundation/js/vendor/what-input.js"></script>
     <script src="lib/foundation/js/vendor/foundation.js"></script>
 
