--- a/web/index.html
+++ b/web/index.html
@@ -50,6 +50,7 @@
     <script src="src/view_templates/map_selection_dialog.js"></script>
     <script src="src/view_templates/title_bar.js"></script>
     <script src="src/view_templates/new_game_dialog.js"></script>
+    <script src="src/view_templates/additional_data_dialog.js"></script>
 
     <script src="src/view/scale_elements.js"></script>
     <script src="src/view/canvas_manager.js"></script>
@@ -61,6 +62,7 @@
     <script src="src/view/map_selection_dialog.js"></script>
     <script src="src/view/game_title_bar.js"></script>
     <script src="src/view/new_game_dialog.js"></script>
+    <script src="src/view/additional_data_dialog.js"></script>
 
     <script src="src/game_logic/path_manager.js"></script>
     <script src="src/game_logic/path_save_load.js"></script>
