Added Some Map Controls; currently failing at centering the image properly after zooming

--- a/web/index.html
+++ b/web/index.html
@@ -48,6 +48,7 @@
     <script src="src/view_templates/marker.js"></script>
     <script src="src/view_templates/map_list.js"></script>
     <script src="src/view_templates/map_selection_dialog.js"></script>
+    <script src="src/view_templates/map_controls.js"></script>
     <script src="src/view_templates/title_bar.js"></script>
     <script src="src/view_templates/new_game_dialog.js"></script>
     <script src="src/view_templates/additional_data_dialog.js"></script>
