scales canvas and title bar correctly

--- a/web/index.html
+++ b/web/index.html
@@ -12,12 +12,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="row">
-      <div class="small-12 columns" id="title_bar_area">
-      </div>
-    </div>
+    <div class="main-container">
+        <div class="row">
+          <div class="small-12 columns" id="title_bar_area">
+          </div>
+        </div>
 
-    <div class="row" id="content_area">
+        <div class="row" id="content_area">
+        </div>
     </div>
 
     <!-- Foundation -->
