Buggy, but more or less feature complete version on desktop & mobile

--- a/web/index.html
+++ b/web/index.html
@@ -37,7 +37,7 @@
 
     <!-- Application parts -->
     <script>
-        var WEBROOT = "/navigame";
+        var WEBROOT = "";
         var NAVIGAME_API = "/navigame_api";  
     </script>
 
