--- a/web/index.html
+++ b/web/index.html
@@ -37,8 +37,8 @@
 
     <!-- Application parts -->
     <script>
-        var WEBROOT = "";
-        var NAVIGAME_API = "/navigame_api";  
+        var WEBROOT = "/navigame";
+        var NAVIGAME_API = "/navigame_api";
     </script>
 
     <script src="src/navilogger.js"></script>
