Updated index.html (same as last commit for readme.md)

--- a/js_docs/index.html
+++ b/js_docs/index.html
@@ -278,7 +278,7 @@ public class Download {
 //    (in einer anderen Klasse)
 
     public void downloadFile(String url) {       
-        Download.start(url,
+        Download.startDownload(url,
             downloadedText -> { // &lt;- lambdas für onSuccess...
                 // do something
             },
