--- a/js_docs/index.html
+++ b/js_docs/index.html
@@ -215,7 +215,9 @@ Bei Erweiterungen der Anwendung könnte man also dieses System verwenden oder au
 <h3>Benennungskonventionen</h3><p>Für Variablen wird meistens &quot;let&quot; statt &quot;var&quot; verwendet (<a href="http://stackoverflow.com/a/11444416">Erklärung</a>).</p>
 <p>Bei der Variablenbenennung bedeutet _ am Anfang, dass es sich um eine private Variable handelt, und $, dass es sich um ein jQuery-Objekt handelt (_$abc ist ein privates jQuery-Objekt). Das ist zwar nur eine Konvention (Variablen mit _ davor sind trotzdem öffentlich zugänglich), sollte aber als verbindlich behandelt werden.</p>
 <p>Alle Klassen befinden sich im navigame-Namespace, welcher in navigameapp.js definiert wird.</p>
-<h3>Server: Lambdas</h3><p>Im Java-Teil des Projekts werden Consumer<T> verwendet. Diese erlauben es, Funktionen als Parameter zu übergeben und &quot;anonyme&quot; Funktionen zu erstellen.
+<h3>Server: Lambdas</h3>
+<div class="highlight highlight-source-diff"><pre style="padding: 16px; overflow: auto; font-size: 85%; line-height: 1.45; background-color: #f6f8fa;"><span class="pl-md" style="color: #bd2c00;background-color: #ffecec;"><span class="pl-md" style="color: #bd2c00;background-color: #ffecec;">-</span> ACHTUNG: Da der Server Java 8 nicht unterstützt hat, wurde als schneller Workaround ein eigenes "J7Consumer&lt;T&gt;"-interface implementiert. Das löst dieselbe Aufgabe eines "universellen Callbacks", bietet jedoch keine der Syntaxfunktionen mit den Pfeilen. Es empfiehlt sich trotzdem, diesen Text zu lesen.</span></pre></div>
+<p>Im Java-Teil des Projekts werden Consumer<T> verwendet. Diese erlauben es, Funktionen als Parameter zu übergeben und &quot;anonyme&quot; Funktionen zu erstellen.
 Angenommen, man möchte eine Funktion aufrufen, wenn ein Prozess, der im Hintergrund läuft (z.B. ein Download), abgeschlossen ist.
 Dann könnte man folgendes tun:</p>
 <pre class="prettyprint source lang-java"><code>
